--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
         <java.version>17</java.version>
     </properties>
     <dependencies>
+<dependency>
+  <groupId>com.google.firebase</groupId>
+  <artifactId>firebase-admin</artifactId>
+  <version>9.2.0</version>
+</dependency
 
         <dependency>
             <groupId>com.google.firebase</groupId>
